Note: this file is in reversed chronological order (bottom to top).


August 4, 2003:
 - BRLTTY 3.3 released:
   Configuring with --without-screen-driver now uses scr_null. (dm)
   Remove the use of sched_yield() to restore tone length accuracy. (np)
   Add the "Say-Line Mode" (Immediate, Enqueue) preference. (np,dm)
   Rename the default for the Linux screen driver option acm from default to auto. (dm)
   No longer strip executables in the build tree. (dm)
   Compile all drivers even if built-in ones are configured. (dm)
   Add the -L (--library-directory=) option to brltty and brltest. (dm)
   Wrap long output lines from configure --help. (dm)
   Enhancements to en-us-g2 contraction table. (jb)
   Braille Lite driver enhancements: (dm)
      Some initialization failures gobble resources.
      Add Millennium support (whiz wheels, advance bar combinations).
      Change keyboard emulation mode default from off to on.
      Allow chorded keyboard input when not in keyboard emulation mode.
   Check for the pow() function during autoconf. (dm)
   The global variable languageCount in the ViaVoice speech driver isn't used. (dm)
   Add basic support for Gnopernicus. (ml)
   autogen.sh invokes autoconf (overridable by $BRLTTY_AUTOCONF) instead of autoconf-2.53. (dm)
   Clean up the make file in the Documents subdirectory. (dm)
   Remove the German BRLTTY manual since it's so out-of-date. (dm)
   Start implementing the Autospeak preference. (dm)
   README.Debian still had references to /sbin/brltty (now in /bin). (sh)
   Make the timing routines more robust. (dm)
   Stop console tones automatically if the system is too slow. (dm)
   Convert the screen drivers from C++ to C. (dm)
   Add the -n, -d and -o options to bp2cf for device path translation. (dm)
   A few changes to text.da-1252.tbl by Svend and his group. (hs)
   Reduce HandyTech driver data segment size. (ml)
   Reduce Papenmeier driver data segment size when configuration file support not included. (ml)