@@ -3,6 +3,11 @@ Note: this file is in reversed chronological order (bottom to top).
 
 August 4, 2003:
  - BRLTTY 3.3 released:
+   Let rpm determine requirements. (dm)
+   Papenmeier driver enhancements: (dm,bd)
+      Write packet as single operation rather than in 3 parts (header, data, trailer).
+      Log output packets.
+      Log full identity packet rather than just first 4 bytes.
    Configuring with --without-screen-driver now uses scr_null. (dm)
    Remove the use of sched_yield() to restore tone length accuracy. (np)
    Add the "Say-Line Mode" (Immediate, Enqueue) preference. (np,dm)
